--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "axios": "^1.7.2",
+    "express": "^4.19.2",
     "react": "18.2.0",
     "react-native": "0.73.7",
     "react-native-dropdown-picker": "^5.4.6",
