--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "axios": "^1.7.2",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "express": "^4.19.2",
     "react": "18.2.0",
     "react-native": "0.73.7",
@@ -24,7 +25,7 @@
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-select-dropdown": "^4.0.1",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -34,14 +35,16 @@
     "@react-native/eslint-config": "0.74.81",
     "@react-native/metro-config": "0.74.81",
     "@react-native/typescript-config": "0.74.81",
-    "@types/react": "^18.2.6",
+    "@types/react": "^18.3.3",
+    "@types/react-native": "^0.73.0",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "typescript": "^5.0.4"
   },
   "engines": {
     "node": ">=18"
