--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@reduxjs/toolkit": "^2.2.5",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "axios": "^1.7.2",
     "deprecated-react-native-prop-types": "^5.0.0",
@@ -25,7 +26,8 @@
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-select-dropdown": "^4.0.1",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
