--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native": "0.73.7",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-image-slider-box": "^2.0.7",
+    "react-native-modals": "^0.22.3",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-select-dropdown": "^4.0.1",
