--- a/package.json
+++ b/package.json
@@ -10,46 +10,47 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-navigation/bottom-tabs": "^6.5.20",
-    "@react-navigation/native": "^6.1.17",
-    "@react-navigation/native-stack": "^6.9.26",
-    "@reduxjs/toolkit": "^2.2.5",
+    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@reduxjs/toolkit": "^2.3.0",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
-    "axios": "^1.7.2",
+    "axios": "^1.7.7",
     "deprecated-react-native-prop-types": "^5.0.0",
-    "express": "^4.19.2",
+    "express": "^4.21.1",
     "formik": "^2.4.6",
-    "react": "18.2.0",
-    "react-native": "0.73.7",
+    "punycode": "^2.3.1",
+    "react": "18.3.1",
+    "react-native": "0.75.4",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-modals": "^0.22.3",
-    "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "^3.31.1",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0",
     "react-native-select-dropdown": "^4.0.1",
-    "react-native-vector-icons": "^10.1.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.74.81",
-    "@react-native/eslint-config": "0.74.81",
-    "@react-native/metro-config": "0.74.81",
-    "@react-native/typescript-config": "0.74.81",
-    "@types/react": "^18.3.3",
+    "@babel/core": "^7.25.8",
+    "@babel/preset-env": "^7.25.8",
+    "@babel/runtime": "^7.25.7",
+    "@react-native/babel-preset": "0.75.4",
+    "@react-native/eslint-config": "0.75.4",
+    "@react-native/metro-config": "0.75.4",
+    "@react-native/typescript-config": "0.75.4",
+    "@types/react": "^18.3.11",
     "@types/react-native": "^0.73.0",
     "@types/react-native-vector-icons": "^6.4.18",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
-    "eslint": "^8.19.0",
-    "jest": "^29.6.3",
-    "prettier": "2.8.8",
-    "react-test-renderer": "18.2.0",
-    "typescript": "^5.0.4"
+    "@types/react-test-renderer": "^18.3.0",
+    "babel-jest": "^29.7.0",
+    "eslint": "^9.12.0",
+    "jest": "^29.7.0",
+    "prettier": "3.3.3",
+    "react-test-renderer": "18.3.1",
+    "typescript": "^5.6.3"
   },
   "engines": {
     "node": ">=18"
